--- a/templates/article.html
+++ b/templates/article.html
@@ -108,7 +108,7 @@
         <section class="post">
             <a href="{% url 'article' blog.title %}">
                 <h2 class="post-title">{{blog.title}}</h2>
-                <div class="post-content">{{blog.content}}</div>
+                <div class="post-content text-justify">{{blog.content}}... <span class="d-sm-none contd-read">continue reading</span></div>
             </a>
         </section>
         
