--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <main id="content" class="content mx-auto p-3 pt-5" role="main">
-	<article class="post tag-fashion tag-art page">
+	<article class="post page">
         <div class="row">
             <div class="col-12">
                 <section>
