--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,13 @@
 <main id="content" class="content mx-auto p-3" role="main">
     <div class="row">
         {% for blog in page_obj %}
-        <div class="col-10 col-sm-6 col-lg-4 p-3">
+        <div class="col-12 col-sm-6 col-lg-4 p-3">
             <article class="post">
                 <header class="post-header">
                 <h2 class="post-title"><a href="{% url 'article' blog.title %}">{{blog.title}}</a></h2>
                 </header>
                 <section class="post-excerpt">
-                <div>
+                <div class="text-justify">
                     {{blog.content}} 
                     <a class="read-more" href="{% url 'article' blog.title %}">&raquo;</a>
                 </div>
@@ -42,24 +42,24 @@
         <nav class="pagination" role="navigation">
             <div class="nested"> 
                 {% if page_obj.has_previous %}  
-                    <a class="d-block newer-posts" href="?page={{page_obj.previous_page_number}}">Newer Posts</a>
+                    <a class="d-block newer-posts" href="?page={{page_obj.previous_page_number}}">Newer<span class="d-none d-sm-inline"> Posts</span></a>
                 {% else %}
-                    <span class="d-block text-muted newer-posts"> Newer Posts</span>
+                    <span class="d-block text-muted newer-posts">Newer<span class="d-none d-sm-inline"> Posts</span></span>
                 {% endif %}
                 <span>&larr;</span>
-                <a href="?page=1" class="d-block">First Page </a>
+                <a href="?page=1" class="d-block">First<span class="d-none d-sm-inline"> Page</span></a>
             </div>
             <div class="nested">
-                <span class="page-number">Page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}</span>
+                <span class="page-number"><span class="d-none d-sm-inline">Page </span>{{page_obj.number}} of {{ page_obj.paginator.num_pages }}</span>
             </div>
             <div class="nested">
                 {% if page_obj.has_next %}
-                    <a class="d-block older-posts" href="?page={{page_obj.next_page_number}}">Older Posts</a>
+                    <a class="d-block older-posts" href="?page={{page_obj.next_page_number}}">Older<span class="d-none d-sm-inline"> Posts</span></a>
                 {% else %}
-                    <span class="d-block text-muted older-posts">Older Posts</span>
+                    <span class="d-block text-muted older-posts">Older<span class="d-none d-sm-inline"> Posts</span></span>
                 {% endif %}
                 <span>&rarr;</span>
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="d-block">Last Page</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}" class="d-block">Last<span class="d-none d-sm-inline"> Page</span></a>
             </div>
         </nav>
     </div>
