Still making chnages on the UI of the app, added button icon and styling

--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -58,7 +58,7 @@ body, .container-fluid{
 	color:#fff;
 }
 .main-nav nav a:hover {
-    color: rgb(237, 253, 13);
+    color: rgb(230, 230, 38);
     font-weight: bold;
 }
 
@@ -231,6 +231,10 @@ main .row article{
 }
 
 @media screen and (max-width: 700px){
+    .menu-btn{
+        background-color: rgb(230, 230, 84);
+        border-color: rgb(230, 230, 38);
+    }
     .tmfc_logo, .main_nav nav{
         padding: unset !important;
     }
