--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                         </a>
                     </div>
                     <div class="col d-block d-sm-none">
-                        <button class="float-right pr-2 menu-btn">Menu</button>
+                        <button class="float-right pr-2 menu-btn"><i class="fa fa-bars fa-2x"></i></button>
                     </div>
                     <div class="col d-none d-sm-block justify-self-center">
                         <nav id="main_nav" data-current="{{ current }}">
@@ -38,9 +38,9 @@
                                 <li class="about" role="presentation"><a href="{% url 'about' %}">About Us</a></li>
                                 <li class="d-none author" role="presentation"><a href="{% url 'author' %}">Author Page</a></li>
                                 <span class="socialheader float-right pr-2">
-                                    <a href="#" class="fa fa-2x fa-facebook pr-3">d</a>
-                                    <a href="#" class="fa fa-2x fa-twitter pr-3">d</a>
-                                    <a href="mailto:jerrycul2001@gmail.com" class="fa fa-envelope pr-3">d</a>
+                                    <a href="#" class="fa fa-2x fa-facebook pr-3"></a>
+                                    <a href="#" class="fa fa-2x fa-twitter pr-3"></a>
+                                    <a href="mailto:jerrycul2001@gmail.com" class="fa fa-envelope pr-3"></a>
                                 </span>
                             </ul>
                         </nav>
@@ -73,9 +73,6 @@
             
         </div>
         <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/msonry.min.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/jqery.fitvids.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
         {% block extra_scripts %}
         {% endblock %}
