--- a/templates/index.html
+++ b/templates/index.html
@@ -2,66 +2,67 @@
 {% load static %}
 {% block content %}
 <div class="row">
-    <div class="col main-header">
-        <header>
-            <div class="main-header-content">
-                <h1 class="page-title">TMFC</h1>
-                <div class="entry-title-divider">
-                    <span></span><span></span><span></span>
-                </div>
-                <h5 class="sub-title">Spreading the light of the gospel.</h5>
-            </div>
-        </header>
-        <a class="d-none d-sm-block fa fa-angle-double-down fa-5x" href="#content" data-offset="-45"></a>
+    <div class="col p-3 index-bg main-header index-header">
+        <div class="main-header-content">
+            <h1 class="page-title">the movement for christ</h1>
+            <h5 class="sub-title">"We are keen on spreading the light of the gospel."</h5>
+        </div>
+        <div class="header-btn">
+            <a class="float-right header-article" href="{% url 'collection' %}">View Our Articles</a>
+            <a class="d-none d-sm-block header-more" href="#content">Continue</a>
+        </div>
     </div>
 </div>
-<main id="content" class="content mx-auto p-3" role="main">
-    <div class="row">
-        {% for blog in page_obj %}
-        <div class="col-12 col-sm-6 col-lg-4 p-3">
-            <article class="post">
-                <header class="post-header">
-                <h2 class="post-title"><a href="{% url 'article' blog.title %}">{{blog.title}}</a></h2>
-                </header>
-                <section class="post-excerpt">
-                <div class="text-justify">
-                    {{blog.content}} 
-                    <a class="read-more" href="{% url 'article' blog.title %}">&raquo;</a>
-                </div>
-                </section>
-                <footer class="text-muted post-meta">
-                <img class="author-thumb" src="{% static 'img/gravatar.jpg' %}" alt="David" nopin="nopin"/>
-                <span>{{blog.author}}</span> &nbsp;| &nbsp;
-                <time class="post-date" datetime="{{blog.date}}">{{blog.date}}</time>
-                </footer>
-            </article>
+<main id="content" class="mx-auto p-5">
+    <div class="row my-3">
+        <div class="col-12 col-sm-6">
+            <h2 class="heading">What we do/ What we stand for</h2>
+            <p class="text-justify apply-color">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
+                quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
+                porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+                nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
+                Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                adipiscing. Eu facilisis sed odio morbi.
+            </p>
         </div>
-        {% endfor %}
+        <div class="col-12 col-sm-6 general-img">
+            <img src="{% static 'img/wedoimg.jpg' %}" alt="What we do">
+        </div>
     </div>
-    <div class="col-12">
-        <nav class="pagination" role="navigation">
-            <div class="nested"> 
-                {% if page_obj.has_previous %}  
-                    <a class="d-block newer-posts" href="?page={{page_obj.previous_page_number}}">Newer<span class="d-none d-sm-inline"> Posts</span></a>
-                {% else %}
-                    <span class="d-block text-muted newer-posts">Newer<span class="d-none d-sm-inline"> Posts</span></span>
-                {% endif %}
-                <span>&larr;</span>
-                <a href="?page=1" class="d-block">First<span class="d-none d-sm-inline"> Page</span></a>
-            </div>
-            <div class="nested">
-                <span class="page-number"><span class="d-none d-sm-inline">Page </span>{{page_obj.number}} of {{ page_obj.paginator.num_pages }}</span>
-            </div>
-            <div class="nested">
-                {% if page_obj.has_next %}
-                    <a class="d-block older-posts" href="?page={{page_obj.next_page_number}}">Older<span class="d-none d-sm-inline"> Posts</span></a>
-                {% else %}
-                    <span class="d-block text-muted older-posts">Older<span class="d-none d-sm-inline"> Posts</span></span>
-                {% endif %}
-                <span>&rarr;</span>
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="d-block">Last<span class="d-none d-sm-inline"> Page</span></a>
-            </div>
-        </nav>
+    <div class="row my-3">
+        <div class="col-12 col-sm-5 d-none d-sm-block general-img">
+            <img src="{% static 'img/missionimg.jpg' %}" class="img" alt="Our Mission Statement">
+        </div>
+        <div class="col-12 col-sm-7">
+            <h2 class="heading">Our mission statement</h2>
+            <p class="text-justify apply-color">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
+                quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
+                porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+                nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
+                Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                adipiscing. Eu facilisis sed odio morbi.
+            </p>
+        </div>
+    </div>
+    <div class="row my-3">
+        <div class="col">
+            <h2 class="heading">How it works</h2>
+            <ul class="apply-color">
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</li>
+                <li>labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue </li>
+                <li>quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi </li>
+                <li>Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+                    nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
+                </li>
+                <li>Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                    adipiscing. Eu facilisis sed odio morbi.
+                </li>
+            </ul>
+        </div>
     </div>
 </main>
 {% endblock %}
