--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,13 +3,13 @@
 {% load static %}
 {% block content %}
 <div class="row bg-change size-fill">
-    <div class="col-12 col-sm-5 text-white">
+    <div class="col-12 col-lg-5 text-white">
         <div>
             <h1 class="page-title">Contact Us @ TMFC</h1>
             <h5>You can contact us, anytime, anywhere</h5>
         </div>
     </div>
-    <div class="col-12 col-sm-7 pt-5">
+    <div class="col-12 col-lg-7 pt-5">
         <div class="col">   
             {% if form %}
             <form class="mx-auto contact" method="POST">
