--- a/templates/index.html
+++ b/templates/index.html
@@ -8,61 +8,63 @@
             <h5 class="sub-title">"We are keen on spreading the light of the gospel."</h5>
         </div>
         <div class="header-btn">
-            <a class="float-right header-article" href="{% url 'collection' %}">View Our Articles</a>
-            <a class="d-none d-sm-block header-more" href="#content">Continue</a>
+            <a class="header-article" href="{% url 'collection' %}">View Our Articles</a>
+            <a class="d-none d-lg-block header-more" href="#content">Continue</a>
         </div>
     </div>
 </div>
-<main id="content" class="mx-auto p-5">
-    <div class="row my-3">
-        <div class="col-12 col-sm-6">
-            <h2 class="heading">What we do/ What we stand for</h2>
-            <p class="text-justify apply-color">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
-                quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
-                porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
-                nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
-                Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
-                adipiscing. Eu facilisis sed odio morbi.
-            </p>
-        </div>
-        <div class="col-12 col-sm-6 general-img">
-            <img src="{% static 'img/wedoimg.jpg' %}" alt="What we do">
-        </div>
-    </div>
-    <div class="row my-3">
-        <div class="col-12 col-sm-5 d-none d-sm-block general-img">
-            <img src="{% static 'img/missionimg.jpg' %}" class="img" alt="Our Mission Statement">
-        </div>
-        <div class="col-12 col-sm-7">
-            <h2 class="heading">Our mission statement</h2>
-            <p class="text-justify apply-color">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-                labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
-                quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
-                porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
-                nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
-                Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
-                adipiscing. Eu facilisis sed odio morbi.
-            </p>
-        </div>
-    </div>
-    <div class="row my-3">
-        <div class="col">
-            <h2 class="heading">How it works</h2>
-            <ul class="apply-color">
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</li>
-                <li>labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue </li>
-                <li>quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi </li>
-                <li>Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+<main id="content" class="w-lg-75 mx-auto" role="main">
+    <section class="index-section">
+        <div class="row my-1">
+            <div class="col-12">
+                <h2 class="heading">What we do/ What we stand for</h2>
+                <img src="{% static 'img/wedoimg.jpg' %}" class="float-right wedo-img" alt="What we do">
+                <p class="text-justify apply-color">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
+                    quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
+                    porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
                     nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
-                </li>
-                <li>Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                    Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
                     adipiscing. Eu facilisis sed odio morbi.
-                </li>
-            </ul>
+                </p>
+            </div>
         </div>
-    </div>
+    </section>
+    <section class="index-section">
+        <div class="row my-1">
+            <div class="col-12">
+                <h2 class="heading mb-2">Our mission statement</h2>
+                <img src="{% static 'img/missionimg.jpg' %}" class="float-left mission-img" alt="Our Mission Statement">
+                <p class="text-justify apply-color">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
+                    labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue 
+                    quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi 
+                    porta. Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+                    nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
+                    Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                    adipiscing. Eu facilisis sed odio morbi.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="index-section">
+        <div class="row my-1">
+            <div class="col">
+                <h2 class="heading">How it works</h2>
+                <ul class="apply-color">
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</li>
+                    <li>labore et dolore magna aliqua. Feugiat vivamus at augue eget. Mi bibendum neque egestas congue </li>
+                    <li>quisque egestas. Sit amet consectetur adipiscing elit. Egestas erat imperdiet sed euismod nisi </li>
+                    <li>Erat nam at lectus urna duis convallis convallis tellus id. Dictum non consectetur a erat 
+                        nam. In ante metus dictum at tempor commodo ullamcorper. Fermentum iaculis eu non diam. 
+                    </li>
+                    <li>Consectetur a erat nam at lectus urna. Facilisis sed odio morbi quis commodo odio aenean sed 
+                        adipiscing. Eu facilisis sed odio morbi.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
 </main>
 {% endblock %}
