--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
 		<meta name='viewport' content='width=device-width,initial-scale=1,shrink-to-fit=no'>
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-4.3.1/css/bootstrap.min.css' %}"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300italic,300,400italic,700,700italic|Playfair+Display:400,700,400italic,700italic"/>
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,10 +24,10 @@
                             <img src="{% static 'img/logo_tmfc.png' %}" class="pl-3 tmfc_logo" alt="TMFC logo"/>
                         </a>
                     </div>
-                    <div class="col d-block d-sm-none">
+                    <div class="col d-block d-lg-none">
                         <button class="float-right pr-2 menu-btn"><i class="fa fa-bars fa-2x"></i></button>
                     </div>
-                    <div class="col d-none d-sm-block justify-self-center">
+                    <div class="col d-none d-lg-block justify-self-center">
                         <nav id="main_nav" data-current="{{ current }}">
                             <ul id="menu">
                                 <li class="home nav-current" role="presentation"><a href="{% url 'home' %}">Home</a></li>
@@ -72,7 +73,9 @@
             </div>
             
         </div>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
+        crossorigin="anonymous"></script>
         <script type="text/javascript" src="{% static 'js/base.js' %}"></script>
         {% block extra_scripts %}
         {% endblock %}
