--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <div class="row main-nav sticky-top py-3">
                     <div class="col-3">
                         <a class="blog-logo" href="{% url 'home' %}">
-                            <img src="{% static 'img/logo_tmfc.png' %}" class="pl-3 tmfc_logo" alt="TMFC logo"/>
+                            <img src="{% static 'img/logo.png' %}" class="pl-3 tmfc_logo" alt="TMFC logo"/>
                         </a>
                     </div>
                     <div class="col d-block d-lg-none">
