--- a/blog/static/css/base.css
+++ b/blog/static/css/base.css
@@ -308,6 +308,12 @@ main article{
     padding: 1em;
 }
 
+.decentralize{
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+}
+
 
 @media screen and (max-width: 1000px){
     .menu-btn{
